--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
         max-width: 90%;
       }
       .contentAbt p {
+        text-align: justify;
       }
       .contentAbt section {
         /* margin-bottom: 100px; */
@@ -601,7 +602,8 @@
         width: 100%;
         height: auto;
       }
-      .awardInfo {
+      .awardInfo p {
+        text-align: left;
       }
 
       /* Our Process */
@@ -653,6 +655,7 @@
       .processDesc p {
         padding-top: 0;
         margin-top: 5px;
+        text-align: left;
       }
       /* Testimonials */
       .swiper {
@@ -1614,10 +1617,10 @@
                   <img src="images/ser1.jpg" class="w100" />
                   <h3>EyeCatch - Branding and Digital Marketing</h3>
                   <p>
-                    Medha Aesthetics (EyeCatch) offers comprehensive branding
-                    services aimed at creating unique and memorable identities
-                    for diverse businesses. From logo design and brand strategy
-                    to packaging, marketing collateral, and digital advertising
+                    Eyecatch Branding offers comprehensive branding services
+                    aimed at creating unique and memorable identities for
+                    diverse businesses. From logo design and brand strategy to
+                    packaging, marketing collateral, and digital advertising
                     campaigns, our team ensures that each brand we develop
                     stands out and excels in the competitive market.
                   </p>
@@ -1640,8 +1643,8 @@
                   <img src="images/ser3.jpg" class="w100" />
                   <h3>EyeCatch Home</h3>
                   <p style="padding-bottom: 0; margin-bottom: 0">
-                    Medha Aesthetics' furniture studio, situated in a 20,000 sq
-                    ft space at Rallaguda, Shamsabad, Hyderabad, crafts bespoke
+                    Eyecatch Home' furniture studio, situated in a 20,000 sq ft
+                    space at Rallaguda, Shamshabad, Hyderabad, crafts bespoke
                     pieces that seamlessly blend form and function. From
                     conceptualization to customization, our designers create
                     furniture that enhances spaces and reflects our commitment
@@ -1725,6 +1728,7 @@
                   max-width: 80%;
                   margin-left: auto;
                   margin-right: auto;
+                  text-align: left;
                 }
                 #fooAbout .social {
                   margin: 30px auto 0 auto;
