--- a/news-events.html
+++ b/news-events.html
@@ -718,7 +718,9 @@
                   </div>
                   <div class="newsInfo">
                     <div class="newsTitle">
-                      <h2>Lorem Ipsum is simply dummy text</h2>
+                      <h2>
+                        Telangana Architect Wins Prestigious FOAID-2024 Award
+                      </h2>
                     </div>
                     <div class="newsMeta">
                       <div class="newsCategory">News, Video,</div>
