--- a/careers.html
+++ b/careers.html
@@ -294,7 +294,7 @@
   <body>
     <!-- Preloader -->
     <div id="preloader">
-      <img src="/images/logo-animation.gif" alt="Loading..." />
+      <img src="/images/crow-animation.gif" alt="Loading..." />
     </div>
     <style>
       #preloader {
