--- a/index.html
+++ b/index.html
@@ -1253,7 +1253,7 @@
                     <div class="processInfo">
                       <div class="processTitle">
                         <span>05</span>
-                        <h3>DELIVER</h3>
+                        <h3>Handover</h3>
                       </div>
                       <div class="processDesc">
                         <p>
