--- a/news-events.html
+++ b/news-events.html
@@ -361,7 +361,7 @@
   <body>
     <!-- Preloader -->
     <div id="preloader">
-      <img src="/images/logo-animation.gif" alt="Loading..." />
+      <img src="/images/crow-animation.gif" alt="Loading..." />
     </div>
     <style>
       #preloader {
