--- a/projects.html
+++ b/projects.html
@@ -411,7 +411,7 @@
   </head>
   <body>
     <div id="preloader">
-      <img src="/images/logo-animation.gif" alt="Loading..." />
+      <img src="/images/crow-animation.gif" alt="Loading..." />
     </div>
     <style>
       #preloader {
