--- a/index.html
+++ b/index.html
@@ -655,7 +655,13 @@
       .processDesc p {
         padding-top: 0;
         margin-top: 5px;
-        text-align: left;
+        text-align: justify;
+        text-justify: inter-word;
+        hyphens: auto;
+        /* line-height: 1.6; */
+        widows: 2;
+        word-break: break-word;
+        overflow-wrap: break-word;
       }
       /* Testimonials */
       .swiper {
