--- a/news-events.html
+++ b/news-events.html
@@ -666,7 +666,7 @@
                     </div>
                     <div class="newsMeta">
                       <div class="newsCategory">News, Video,</div>
-                      <div class="newsDate">Thursday February 6, 2025</div>
+                      <div class="newsDate">Tuesday June 3, 2025</div>
                     </div>
                   </div>
                 </div>
@@ -724,7 +724,7 @@
                     </div>
                     <div class="newsMeta">
                       <div class="newsCategory">News, Video,</div>
-                      <div class="newsDate">Thursday February 6, 2025</div>
+                      <div class="newsDate">Monday May 12, 2025</div>
                     </div>
                   </div>
                 </div>
@@ -776,7 +776,7 @@
                     </div>
                     <div class="newsMeta">
                       <div class="newsCategory">News, Video,</div>
-                      <div class="newsDate">Thursday February 6, 2025</div>
+                      <div class="newsDate">Friday April 11, 2025</div>
                     </div>
                   </div>
                 </div>
@@ -828,7 +828,7 @@
                     </div>
                     <div class="newsMeta">
                       <div class="newsCategory">News, Video,</div>
-                      <div class="newsDate">Thursday February 6, 2025</div>
+                      <div class="newsDate">Wednesday March 12, 2025</div>
                     </div>
                   </div>
                 </div>
@@ -880,7 +880,7 @@
                     </div>
                     <div class="newsMeta">
                       <div class="newsCategory">News, Video,</div>
-                      <div class="newsDate">Thursday February 6, 2025</div>
+                      <div class="newsDate">Wednesday March 5, 2025</div>
                     </div>
                   </div>
                 </div>
@@ -929,13 +929,13 @@
                   <div class="newsInfo">
                     <div class="newsTitle">
                       <h2>
-                        Thirsty Crew - telling stories that are untouched and
+                        Thirsty Crew - Telling stories that are untouched and
                         touching.
                       </h2>
                     </div>
                     <div class="newsMeta">
                       <div class="newsCategory">News, Video,</div>
-                      <div class="newsDate">Thursday February 6, 2025</div>
+                      <div class="newsDate">Tuesday February 25, 2025</div>
                     </div>
                   </div>
                 </div>
@@ -991,7 +991,7 @@
                     </div>
                     <div class="newsMeta">
                       <div class="newsCategory">News, Video,</div>
-                      <div class="newsDate">Thursday February 6, 2025</div>
+                      <div class="newsDate">Tuesday February 11, 2025</div>
                     </div>
                   </div>
                 </div>
@@ -1051,7 +1051,7 @@
                     </div>
                     <div class="newsMeta">
                       <div class="newsCategory">Gallery,</div>
-                      <div class="newsDate">Thursday February 6, 2025</div>
+                      <div class="newsDate">Monday January 13, 2025</div>
                     </div>
                   </div>
                 </div>
@@ -1135,7 +1135,7 @@
                     </div>
                     <div class="newsMeta">
                       <div class="newsCategory">News, Video,</div>
-                      <div class="newsDate">Thursday February 6, 2025</div>
+                      <div class="newsDate">Friday January 3, 2025</div>
                     </div>
                   </div>
                 </div>
