--- a/news-events.html
+++ b/news-events.html
@@ -889,7 +889,7 @@
                   <div class="newsVideo">
                     <video controls>
                       <source
-                        src="news/3.mp4"
+                        src="news/Maps Reel 1500X850.mp4"
                         type="video/mp4"
                         poster="/images/blank.png"
                       />
@@ -944,7 +944,7 @@
                   <div class="newsVideo">
                     <video controls>
                       <source
-                        src="news/2.mp4"
+                        src="news/Eyecatch Usp 1500X850.mp4"
                         type="video/mp4"
                         poster="/images/blank.png"
                       />
