--- a/architecture.html
+++ b/architecture.html
@@ -616,8 +616,15 @@
                         </li>
                         <li class="ss-carousel__item textBlock">
                           <div class="ss-carousel__description">
-                            <p>Dummy Text</p>
-                            <p>Dummy</p>
+                            <p>
+                              Finnish shamanism and paganism, the ethnic
+                              religious traditions of pre-Christian Finland,
+                              have deep ties to nature and spiritual balance.
+                              Rooted in the indigenous Sámi culture, Finnish
+                              shamanism emphasizes the connection between humans
+                              and the natural world, fostering personal growth
+                              and emotional equilibrium.
+                            </p>
                           </div>
                         </li>
                         <li class="ss-carousel__item slideBlock">
@@ -686,7 +693,12 @@
                         </li>
                         <li class="ss-carousel__item textBlock">
                           <div class="ss-carousel__description">
-                            <p>Dummy</p>
+                            <p>
+                              While traditional shamanistic beliefs have
+                              dwindled over time, there remains a small
+                              community of Neo-pagans who continue to practice
+                              these age-old spiritual traditions.
+                            </p>
                           </div>
                         </li>
                         <li class="ss-carousel__item slideBlock">
@@ -793,7 +805,7 @@
                       <img src="/projects/tea/icon.jpg" />
                     </div>
                     <div class="projectTitleInfo">
-                      <h3 class="projectTitle">Temae</h3>
+                      <h3 class="projectTitle">Tea-Tale</h3>
                     </div>
                   </div>
                   <div class="heroSection">
@@ -822,7 +834,7 @@
                                 <img src="/projects/tea/icon.jpg" />
                               </div>
                               <div class="projectTitleInfo">
-                                <h3 class="projectTitle">Temae</h3>
+                                <h3 class="projectTitle">Tea-Tale</h3>
                               </div>
                             </div>
                             <div class="moreInfo">
@@ -875,8 +887,15 @@
                         </li>
                         <li class="ss-carousel__item textBlock">
                           <div class="ss-carousel__description">
-                            <p>Dummy Text</p>
-                            <p>Dummy</p>
+                            <p>
+                              The Japanese tea ceremony, known as sadō or
+                              chanoyu (meaning “The Way of Tea”), is a deeply
+                              rooted cultural practice centered around the
+                              ceremonial preparation and presentation of matcha,
+                              powdered green tea. The intricate procedure,
+                              called temae, reflects mindfulness, harmony, and
+                              respect.
+                            </p>
                           </div>
                         </li>
                         <li class="ss-carousel__item slideBlock">
@@ -931,7 +950,18 @@
                         </li>
                         <li class="ss-carousel__item textBlock">
                           <div class="ss-carousel__description">
-                            <p>Dummy</p>
+                            <p>
+                              Although it is commonly referred to as a "tea
+                              ceremony" in the West, the practice is rarely
+                              ceremonial in the traditional sense. These
+                              gatherings typically take place in specially
+                              constructed spaces or rooms designed for tea
+                              rituals. While a dedicated tatami-floored room is
+                              ideal, any setting where the necessary implements
+                              can be arranged and where the host can prepare tea
+                              in the presence of guests can serve as an
+                              appropriate venue.
+                            </p>
                           </div>
                         </li>
                         <li class="ss-carousel__item slideBlock">
@@ -1115,6 +1145,21 @@
                             alt=""
                           />
                         </li>
+                        <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                            <p>
+                              The concept is to create a public installation
+                              that doubles as a café, serving both a functional
+                              and experiential purpose. This installation is
+                              designed to bring people closer to nature,
+                              offering a moment of connection amidst their
+                              fast-paced, mechanized lives. In modern times,
+                              individuals are increasingly distanced from
+                              natural forms and daylight, both of which play a
+                              crucial role in physical and mental well-being.
+                            </p>
+                          </div>
+                        </li>
 
                         <li class="ss-carousel__item slideBlock">
                           <div class="swiper mySwiper">
@@ -1158,10 +1203,35 @@
                             <div class="swiper-pagination"></div>
                           </div>
                         </li>
+                        <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                            <p>
+                              The exterior structure is inspired by a distorted
+                              shell, embodying organic fluidity. The side
+                              elevations and top-down plan provide a clearer
+                              understanding of the design, with key elements
+                              highlighted:
+                            </p>
+                            <p>
+                              <strong>Red Line:</strong> Represents the
+                              centerline and the highest point of the shell,
+                              reaching 5 meters.
+                            </p>
+                            <p>
+                              <strong>Blue Circles:</strong> Indicate the lowest
+                              points of the roof, measuring 4 millimeters.
+                            </p>
+                            <p>
+                              <strong>Green Circles:</strong> Mark the
+                              connection points where the shell meets the
+                              ground.
+                            </p>
+                          </div>
+                        </li>
                         <li class="ss-carousel__item imgBlock">
                           <img
                             class="ss-carousel__item__image"
-                            src="/projects/shell/4.jpg"
+                            src="/projects/shell/4.png"
                             alt=""
                           />
                         </li>
@@ -1208,11 +1278,7 @@
                             <div class="swiper-pagination"></div>
                           </div>
                         </li>
-                        <li class="ss-carousel__item textBlock">
-                          <div class="ss-carousel__description">
-                            <p>Dummy</p>
-                          </div>
-                        </li>
+
                         <li class="ss-carousel__item slideBlock">
                           <div class="swiper mySwiper">
                             <div class="swiper-wrapper">
