--- a/architecture.html
+++ b/architecture.html
@@ -633,14 +633,14 @@
                               <div class="swiper-slide">
                                 <img
                                   class="ss-carousel__item__image"
-                                  src="/projects/meditation/4-1.jpg"
+                                  src="/projects/meditation/4new-1.jpg"
                                   alt=""
                                 />
                               </div>
                               <div class="swiper-slide">
                                 <img
                                   class="ss-carousel__item__image"
-                                  src="/projects/meditation/4-2.jpg"
+                                  src="/projects/meditation/4new-2.jpg"
                                   alt=""
                                 />
                               </div>
@@ -925,6 +925,13 @@
                             </div>
                             <div class="swiper-pagination"></div>
                           </div>
+                        </li>
+                        <li class="ss-carousel__item imgBlock">
+                          <img
+                            class="ss-carousel__item__image"
+                            src="/projects/tea/4.jpg"
+                            alt=""
+                          />
                         </li>
 
                         <li class="ss-carousel__item slideBlock">
