--- a/projects.html
+++ b/projects.html
@@ -1915,7 +1915,7 @@
                           </video>
                         </li>
 
-                        <li class="ss-carousel__item slideBlock">
+                        <!-- <li class="ss-carousel__item slideBlock">
                           <div class="swiper mySwiper">
                             <div class="swiper-wrapper">
                               <div class="swiper-slide">
@@ -1956,7 +1956,7 @@
                             </div>
                             <div class="swiper-pagination"></div>
                           </div>
-                        </li>
+                        </li> -->
 
                         <!-- <li class="ss-carousel__item imgBlock">
                           <img
